# maitrize-tauri

./: .gitignore  PUBLISHING.md  README.md  build-mas.sh  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  api.ts  contexteIA.ts  devSeed.ts  inbox.ts  main.tsx  print.ts  theme.css  theme.ts  updater.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/referentiels/: competences_cycle1.json  competences_cycle1_2025.json  competences_cycle2.json  competences_cycle3.json
src-tauri/src/: ai.rs  amis.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  portable.rs  seed.rs  sync.rs  synthese_pdf.rs
src/components/: CGU.tsx  CommandPalette.tsx  CompetenceTree.tsx  Deroulement.tsx  Markdown.tsx  NotesPanel.tsx  Onboarding.tsx  PdfViewer.tsx  PhotoTelephone.tsx  SeanceParts.tsx  Toaster.tsx  UpdateBanner.tsx  ctxmenu.tsx  ui.tsx
src/data/: eduscol.json  outils.json  syntheseGS.json  videos.json
src/pages/: Amis.tsx  Assistant.tsx  Ateliers.tsx  Dashboard.tsx  Eleves.tsx  Materiel.tsx  Organisation.tsx  Planning.tsx  Projets.tsx  Referentiels.tsx  Reglages.tsx  Ressources.tsx  SequenceDetail.tsx  Sequences.tsx
