[package]
name = "maitrize-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maitrize_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
printpdf = "0.7"
lopdf = "0.31"
# Appariement chiffré entre utilisateurs (identité X25519 + numéro de sécurité)
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
# Transfert chiffré E2E via stockage S3-compatible (MinIO/Scaleway/Hetzner)
chacha20poly1305 = "0.10"
hkdf = "0.12"
aws-sdk-s3 = "1"
# Version portable : petit serveur HTTP sur le réseau local + QR code
tiny_http = "0.12"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

